$Id$

2020-08-22  Christian Franke  <franke@computer.org>

	smartd.service.in: Don't start smartd in virtualized environments
	(GH issues/62).

2020-08-22  Marko Hauptvogel  <marko.hauptvogel@googlemail.com>

	smartd.service.in: Remove obsolete 'StandardOutput=syslog'.

2020-07-11  Christian Franke  <franke@computer.org>

	scsiprint.cpp: Add JSON values 'power_on_time.{hours,minutes}' to
	'smartctl -a' output.  Add missing pout() -> jout() replacements.

2020-07-10  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: Add "Accumulated power on time" entry to
	  'smartctl -a' output. Previously this was only output
	  when the '-x' option was given, together with other
	  fields in the Background scan results log page. Now
	  with the '-a' option "Accumulated power on time" is
	  printed just before the "Manufactured in week ..." line.

2020-07-06  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: Attempted fix to tickets 1272, 1331 and 1346
	  The difficulty is handling SCSI log _sub_-pages that hold
	  info about SSDs and newer hard drives, against older 
	  devices (20 year old disks?) that do many and varied
	  things when asked to list supported sub-pages. Add a
	  heuristic and change some naming.

2020-06-24  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp: Fix NVMe log support, handle error codes,
	  remove SMARTReadData call
	os_darwin.h: Cleanup, remove all private functions

2020-06-23  Harry Mallon  <hjmallon@gmail.com>

	os_darwin.cpp, os_darwin.h: Add support for NVMe logs.
	smartctl.8.in: Update related documentation.

2020-06-20  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 11/1300 SSDs: Rename,
	  add 1300
	- Plextor M3/M5/M6/M7 Series SSDs: Rename, *M6G variant, *M7CV (#991)
	- Silicon Motion based SSDs: ADATA SU650 (#1243), ADATA SU655
	- Seagate IronWolf Pro: 16TB (#1341)
	- USB: Toshiba (0x0930:0xa002)
	- USB: ADATA HD330 (0x125f:0xa83a)
	- USB: AkiTio NT2 (0x2ce5:0x0014)
